test/src/e2e_vm_tests/test_programs/should_pass/test_abis/spark_perps_proxy_abi/src/data_structures.sw
library;

pub struct SparkContracts {
    pub account_balance_address: Address,
    pub vault_address: Address,
}
