test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/unknown_attr.sw
library;

#[unknown]
#[unknown()]
#[unknown(arg_1)]
#[unknown(arg_1, arg_2)]
pub struct Ok { }